samples/wig/should_pass/multitrack.wig
track name=HIVint type=wiggle_0 description="HIV integration sites"
variableStep chrom=chr1
1 10
2 5
3 10
10 0
track type=wiggle_0
fixedStep chrom=chr2 start=0
1
2
3
track type=wiggle_0
variableStep chrom=chr2
100 10
101 5
102 10
103 0
